push complete actions

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,10 +3,10 @@
   <% @list.bookmarks.each do |bookmark| %>
     <div class="bg-dark rounded">
       <h5><%= bookmark.movie.title %></h5>
-      <p>Here will be a link</p>
+      <p><%= link_to "Delete", bookmark_path(bookmark.id), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></p>
     </div>
   <% end %>
 </div>
-<%= link_to "Add a Movie", list_bookmarks_path(@list.id) %>
+<%= link_to "Add a Movie", new_list_bookmark_path(@list.id) %>
 <br>
 <%= link_to "Back to lists", lists_path %>
